sanitized names and renamed singleResource spreadsheet to singleStructure to be more correct

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,6 +1,6 @@
 ---
 # jekyll header
-title: NCCN Templates Implementation Guide
+title: example Templates Implementation Guide
 ---
 {% include header.html %}
 
@@ -11,12 +11,12 @@ title: NCCN Templates Implementation Guide
   <!-- ============CONTENT CONTENT=============== -->
 
 <p style="background-color: gold; border:1px solid maroon; padding: 5px;">
-This is the Current Draft of the NCCN Templates Implementation Guide. See the <a href="http://nccn.org/fhir/history.html">Directory of published versions <img src="external.png" style="text-align: baseline"></a>
+This is the Current Draft of the example Templates Implementation Guide. See the <a href="http://example.org/fhir/history.html">Directory of published versions <img src="external.png" style="text-align: baseline"></a>
 </p>
 
 <h2>{{ page.title }}</h2>
 
-{% capture my-include %}{% include nccn-intro.md %}{% endcapture %}{{ my-include | markdownify }}
+{% capture my-include %}{% include example-intro.md %}{% endcapture %}{{ my-include | markdownify }}
 
 
 
