--- a/pages/profiles.html
+++ b/pages/profiles.html
@@ -10,7 +10,7 @@
   <!-- ============CONTENT CONTENT=============== -->
 
   <h2>
-   Profiles defined as part of the NCCN Templates Implementation Guide
+   Profiles defined as part of the example Templates Implementation Guide
   </h2>
 
   <p>The following profiles set the minimum expectations to record, search and fetch health data associated with a Patient:</p>
