--- a/pages/history.html
+++ b/pages/history.html
@@ -10,7 +10,7 @@
   <!-- ============CONTENT CONTENT=============== -->
 
 
-    {% capture my-include %}{% include nccn-history.md %}{% endcapture %}{{ my-include | markdownify }}
+    {% capture my-include %}{% include example-history.md %}{% endcapture %}{{ my-include | markdownify }}
 
 
 
